--- a/asdfg.html
+++ b/asdfg.html
@@ -7,6 +7,7 @@
     <title>My activity</title>
 </head>
 <body>
-<p> my branch 2 </p>
+<p> my branch 2  </p>
+<p> my branch edited  </p>
 </body>
 </html>
